<resources>
    <string name="app_name">Salao On</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="splash_screen_title">Salão ON</string>

    <string name="category_register_text">Como você deseja realizar o login? </string>
    <string name="category_register_client">Cliente</string>
    <string name="category_register_professional">Profissional</string>

    <string name="facebook_app_id">658722750997881</string>
    <string name="fb_login_protocol_scheme">fb658722750997881</string>

    <string name="processing_login">Processando login, por favor aguarde…</string>

    <string name="error_facebook_login_canceled">Login com o Facebook cancelado.</string>
    <string name="error_facebook_login_unknown_error">Erro desconhecido com o login com o Facebook, tente novamente e contate o administrador.</string>
    <string name="error_failed_signin_email_exists">Falha ao entrar\n\nEsse e-mail já está sendo usado em nosso sistema e dispositivo.\nTente novamente com outro método de login.</string>
    <string name="error_unknown_error">Erro desconhecido, tente novamente e contate o administrador.</string>
    <string name="error_signin">Algo deu errado ao fazer login, tente novamente.</string>
    <string name="error_required_field">Campo obrigatório</string>
    <string name="error_hour_opening_field_required">Preenchimento do horário de abertura obrigatório</string>
    <string name="error_hour_closing_field_required">Preenchimento do horário de fechamento obrigatório</string>

    <string name="sign_with_text">Bem vindo ao Salão On</string>
    <string name="sign_with_text2">Faça seu login e aproveite</string>

    <string name="nav_header_exit">Sair</string>

    <string name="register_client_title">Complete seu cadastro de Cliente</string>
    <string name="register_client_name">Nome completo</string>
    <string name="register_client_cpf">CPF</string>
    <string name="register_client_cep">CEP</string>
    <string name="register_client_address">Endereço</string>
    <string name="register_client_button_save">Salvar</string>

    <string name="cpf_mask">###.###.###-##</string>
    <string name="cnpj_mask">##.###.###.####-##</string>
    <string name="cep_mask">#####-###</string>

    <string name="register_professional_title">Complete seu cadastro de Profissional</string>
    <string name="register_professional_name">Nome completo</string>
    <string name="register_professional_cnpj">CNPJ</string>
    <string name="register_professional_cpf">CPF</string>
    <string name="register_professional_cep">CEP</string>
    <string name="register_professional_address">Endereço</string>
    <string name="register_professional_button_save">Salvar</string>
    <string name="register_professional_button_hour_first">Abertura</string>
    <string name="register_professional_button_hour_final">Encerramento</string>
    <string name="register_professional_text_hour">Selecione a hora de abertura e encerramento</string>
    <string name="register_professional_text_specialty">Selecione suas especialidade</string>
    <string name="register_professional_hairdresse">Cabeleireiro(a)</string>
    <string name="register_professional_check_make">Maqueador(a)</string>
    <string name="register_professional_manicure">Manicure</string>
    <string name="error_specialty_checkbox_required">Obrigatório o preenchimento de ao menos uma especialidade</string>
    <string name="error_invalid_cpf">CPF inválido</string>
    <string name="error_hour_opening_greater_then_closing">Horário de abertura não pode ser maior que a de fechamento</string>
    <string name="successfully_registered">Cadastrado com sucesso</string>

</resources>
