<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comcesar1287.github.salaoon.CategoryRegisterActivity">

    <TextView
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:text="@string/category_register_text"
        android:textSize="27sp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:text="@string/category_register_client"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:text="@string/category_register_professional"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
